# AGM_Training

./: .gitignore  AGM_ADAPTIVE_PROPERTIES.md  AGM_TRAINING.md  DEVELOPER_GUIDE.md  README.md  TESTING_MANUAL.md  pyproject.toml  requirements.txt
configs/: agm_convergence.yaml  agm_hparam.yaml  agm_phase.yaml  default.yaml
docs/: CI.md  HMPO_INTEGRATION.md
scripts/: actor.py  aggregate_controllers.py  analyze_ingest.py  benchmark_compare.py  hmpo_ingest_runner.py  learner.py  plot_controllers.py  profile_smoothing.py  sweep_controllers.py  wandb_export.py
src/agmlib/: __init__.py  adaptation.py  config.py  dqn.py  early_stop.py  entities.py  events.py  replay.py  smoothing.py  telemetry.py
src/agmlib/agm/: __init__.py  convergence.py  curriculum.py  detectors.py  hparam.py  multiscale.py  phase.py  telemetry.py  uncertainty.py  wiring.py
tests/life/: test_controller_events.py  test_entities_events.py
tests/smoke/: test_hmpo_ingest_runner.py  test_smoke.py
tests/unit/: test_adaptation.py  test_config.py  test_early_stop_trend.py  test_smoothing.py
tests/unit/agm/: test_convergence.py  test_curriculum.py  test_detectors.py  test_hparam.py  test_multiscale.py  test_phase.py  test_telemetry.py  test_uncertainty_gating.py  test_wiring.py
